refactor: global code cleanup and optimization