@@ -3,11 +3,10 @@ package com.skillroute.service;
 import com.skillroute.dto.request.AddSkillRequest;
 import com.skillroute.dto.request.CreateVacancyRequest;
 import com.skillroute.dto.request.UpdateVacancyRequest;
-import com.skillroute.dto.response.SpecializationResponse;
 import com.skillroute.dto.response.VacancyResponse;
-import com.skillroute.dto.response.VacancySkillResponse;
 import com.skillroute.exception.EntityNotFoundException;
 import com.skillroute.exception.ResourceOwnershipException;
+import com.skillroute.mapper.VacancyMapper;
 import com.skillroute.model.*;
 import com.skillroute.model.id.VacancySkillId;
 import com.skillroute.properties.MessageProperties;
@@ -17,7 +16,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.HashSet;
 import java.util.Set;
 import java.util.stream.Collectors;
 
@@ -29,36 +27,21 @@ public class VacancyService {
     private final SpecializationRepository specializationRepository;
     private final SkillRepository skillRepository;
     private final MessageProperties messages;
-
-    @Transactional(readOnly = true)
-    public List<VacancyResponse> getAllActive() {
-        return vacancyRepository.findAllByProfileStatus(VacancyStatus.OPEN)
-                .stream()
-                .map(this::mapToResponseDto)
-                .collect(Collectors.toList());
-    }
+    private final VacancyMapper vacancyMapper;
 
     @Transactional(readOnly = true)
     public List<VacancyResponse> getVacanciesByCompany(Long companyId) {
-        return vacancyRepository.findAllByCompanyId(companyId)
+        return vacancyRepository.findAllByCompanyIdAndProfileStatus(companyId, VacancyStatus.OPEN)
                 .stream()
-                .map(this::mapToResponseDto)
-                .collect(Collectors.toList());
-    }
-
-    @Transactional(readOnly = true)
-    public List<VacancyResponse> getHighDemandVacancies(int minSkills) {
-        return vacancyRepository.findHighDemandVacancies(minSkills)
-                .stream()
-                .map(this::mapToResponseDto)
-                .collect(Collectors.toList());
+                .map(vacancyMapper::toResponse)
+                .toList();
     }
 
     @Transactional(readOnly = true)
     public VacancyResponse getVacancyById(Long id) {
         Vacancy vacancy = vacancyRepository.findById(id)
                 .orElseThrow(() -> new EntityNotFoundException(messages.getEntity().getVacancyNotFound()));
-        return mapToResponseDto(vacancy);
+        return vacancyMapper.toResponse(vacancy);
     }
 
     @Transactional
@@ -154,36 +137,4 @@ public class VacancyService {
         vacancy.getVacancySkills().addAll(skills);
     }
 
-    private VacancyResponse mapToResponseDto(Vacancy vacancy) {
-        VacancyProfile profile = vacancy.getProfile();
-        Specialization spec = profile.getSpecialization();
-
-        return VacancyResponse.builder()
-                .id(vacancy.getId())
-                .name(vacancy.getName())
-                .companyId(vacancy.getCompany().getId())
-                .salary(profile.getSalary())
-                .workSchedule(profile.getWorkSchedule())
-                .status(profile.getStatus())
-                .specialization(mapSpecialization(spec))
-                .skills(vacancy.getVacancySkills().stream()
-                        .map(vs -> new VacancySkillResponse(
-                                vs.getSkill().getId(),
-                                vs.getSkill().getName(),
-                                vs.getLevel()))
-                        .collect(Collectors.toList()))
-                .build();
-    }
-
-    private SpecializationResponse mapSpecialization(Specialization specialization) {
-        if (specialization == null) {
-            return null;
-        }
-
-        return SpecializationResponse.builder()
-                .id(specialization.getId())
-                .direction(specialization.getDirection())
-                .language(specialization.getLanguage())
-                .build();
-    }
 }
